<?xml version="1.0"?>
<package format="3">
  <name>robosense_ac_depth</name>
  <version>1.0.0</version>
  <description>ROS/ROS2 wrapper for stereo matching</description>

  <maintainer email="paul.zhang@robosense.cn">Your Name</maintainer>
  <!-- <developer email="calvin.yu@robosense.cn">Calvin Yu</developer> -->
  <license>MIT</license>

  <!-- ROS1 build tool -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  
  <!-- ROS2 build tool -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- ROS1 dependencies -->
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  
  <!-- ROS2 dependencies -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  
  <!-- Common dependencies for both ROS1 and ROS2 -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>robosense_msgs</depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
